2002-11-20  Darin Adler  <darin@apple.com>

	- atomic identifiers; gives another 6.5% in the iBench suite

        * kjs/identifier.h: Did the real thing.
        * kjs/identifier.cpp: Ditto.

        * kjs/property_map.h: _tableSizeHashMask -> _tableSizeMask
        * kjs/property_map.cpp: The above, plus take advantage of comparing
	by pointer instead of by comparing bytes.

2002-11-19  Darin Adler  <darin@apple.com>

	- a few more globals for often-used property names
	- conversion to Identifier from UString must now be explicit

        * kjs/error_object.cpp:
        * kjs/function.cpp:
        * kjs/function_object.cpp:
        * kjs/identifier.cpp:
        * kjs/identifier.h:
        * kjs/lexer.cpp:
        * kjs/nodes.cpp:
        * kjs/number_object.cpp:
        * kjs/object.cpp:
        * kjs/object.h:
        * kjs/string_object.cpp:
        * kjs/testkjs.cpp:
        * kjs/ustring.cpp:
        * kjs/ustring.h:

2002-11-19  Darin Adler  <darin@apple.com>

	- another step towards atomic identifiers; storing hash in the string rep. gives about
	a 1.5% speedup in the JavaScript iBench

        * kjs/ustring.h: Add a hash field to UString::Rep.
        * kjs/ustring.cpp:
        (UString::Rep::create): Set hash to uninitialized value.
        (UString::Rep::destroy): Do the deleting in her, and call Identifier if needed.
        (UString::Rep::computeHash): Added.
        (UString::append): Set hash to 0 when modifying the string in place.
        (UString::operator=): Ditto.

        * kjs/property_map.cpp: Use the hash from UString.

        * kjs/identifier.h: Added aboutToDestroyUStringRep.
        * kjs/identifier.cpp: (Identifier::aboutToDestroyUStringRep): Added.

2002-11-19  Darin Adler  <darin@apple.com>

	- next step towards atomic identifiers; Identifier is no longer derived from UString

        * kjs/identifier.h: Remove base class and add _ustring member.
        * kjs/identifier.cpp: Add null and an == that works with const char *.