@@ -183,7 +183,12 @@ namespace KJS {
      * function has a @ref KJS::List parameter.
      */
     static const List &empty();
+    
     void mark();
+    
+    void replaceFirst(ValueImp *);
+    void replaceLast(ValueImp *);
+    
   private:
 
     void erase(ListNode *n);
